--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -225,6 +225,7 @@
     <string name="password_protect_hidden_items">用密碼保護隱藏的物件</string>
     <string name="password_protect_whole_app">用密碼保護整個應用程式</string>
     <string name="keep_last_modified">當檔案複製/移動/重新命名時，保留舊的「最後修改」數值</string>
+    <string name="show_info_bubble">Show an info bubble at scrolling items by scrollbar dragging</string>
 
     <!-- About -->
     <string name="about">關於</string>
