--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -225,7 +225,7 @@
     <string name="password_protect_hidden_items">Verstecktes mit Muster/PIN schützen</string>
     <string name="password_protect_whole_app">Gesamte App mit Passwort schützen</string>
     <string name="keep_last_modified">Beim Kopieren/Verschieben/Umbenennen die alte Änderungszeit beibehalten</string>
-    <string name="show_info_bubble">Show an info bubble at scrolling items by scrollbar dragging</string>
+    <string name="show_info_bubble">Zeige Info-Fenster beim Scrollen mithilfe des Scrollbalkens an</string>
 
     <!-- About -->
     <string name="about">Über</string>
