updating some slovak strings

--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -162,14 +162,14 @@
     <string name="maximum_share_reached">Nemôžete zdieľať toľko obsahu naraz</string>
 
     <!-- Sorting -->
-    <string name="sort_by">Zoradiť podľa</string>
-    <string name="name">Názvu</string>
-    <string name="size">Veľkosti</string>
-    <string name="last_modified">Dátumu poslednej úpravy</string>
-    <string name="date_taken">Dátumu vytvorenia</string>
-    <string name="title">Názvu</string>
-    <string name="filename">Názvu súboru</string>
-    <string name="extension">Prípony</string>
+    <string name="sort_by">Na zoradenie použiť</string>
+    <string name="name">Názov</string>
+    <string name="size">Veľkosť</string>
+    <string name="last_modified">Dátum poslednej úpravy</string>
+    <string name="date_taken">Dátum vytvorenia</string>
+    <string name="title">Názov</string>
+    <string name="filename">Názov súboru</string>
+    <string name="extension">Prípona</string>
     <string name="ascending">Vzostupne</string>
     <string name="descending">Klesajúco</string>
     <string name="use_for_this_folder">Použiť iba pre tento priečinok</string>
