--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -126,7 +126,7 @@
     <string name="undo_changes">Desfazer alterações</string>
     <string name="undo_changes_confirmation">Tem a certeza de que deseja desfazer as alterações?</string>
     <string name="save_before_closing">Existem alterações não guardadas. Deseja guardar antes de sair?</string>
-    <string name="apply_to_all_apps">Alicar cores a todas as aplicações Simple</string>
+    <string name="apply_to_all_apps">Aplicar cores a todas as aplicações Simple</string>
     <string name="share_colors_success">Cores atualizadas com sucesso. Foi criado o novo tema \'Partilhado\', que pode utilizar para atualizar as cores de todas as aplicações Simple.</string>
     <string name="purchase_thank_you">
         <![CDATA[
@@ -138,7 +138,7 @@
     <string name="light_theme">Claro</string>
     <string name="dark_theme">Escuro</string>
     <string name="solarized">Solar</string>
-    <string name="dark_red">vermelho escuro</string>
+    <string name="dark_red">Vermelho escuro</string>
     <string name="custom">Personalizado</string>
     <string name="shared">Partilhado</string>
 
