--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Keine passende App gefunden</string>
     <string name="set_as">Festlegen als</string>
     <string name="value_copied_to_clipboard">Wert in Zwischenablage kopiert</string>
+    <string name="filter">Sortieren</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Speicher-Berechtigung wird benötigt</string>
