--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Nie znaleziono danych aplikacji</string>
     <string name="set_as">Ustaw jako</string>
     <string name="value_copied_to_clipboard">Wartość została skopiowana do schowka</string>
+    <string name="filter">Filtr</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Wymagane jest uprawnienie \'Pamięć\'</string>
