--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Nenašla sa žiadna vhodná aplikácia</string>
     <string name="set_as">Nastaviť ako</string>
     <string name="value_copied_to_clipboard">Hodnota bola vložená do schránky</string>
+    <string name="filter">Filtrovať</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Je potrebné povolenie pre prístup k súborom</string>
