--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Sovelluksia ei löydetty</string>
     <string name="set_as">Aseta</string>
     <string name="value_copied_to_clipboard">Valeur copiée dans le presse-papier</string>
+    <string name="filter">Filter</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Storage permission is required</string>
