--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Nenhum aplicativo encontrado</string>
     <string name="set_as">Definir como</string>
     <string name="value_copied_to_clipboard">Valor copiado para a área de transferência</string>
+    <string name="filter">Filtrar</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">É necessária a permissão Armazenamento</string>
