--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">未找到可用应用</string>
     <string name="set_as">设置为</string>
     <string name="value_copied_to_clipboard">颜色值已复制到剪贴板</string>
+    <string name="filter">Filter</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">请授予存储权限</string>
