--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">找不到應用程式</string>
     <string name="set_as">設為</string>
     <string name="value_copied_to_clipboard">數值複製到剪貼簿</string>
+    <string name="filter">Filter</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">存儲權限是必要的</string>
